src/objects/SPEX_DB_Platform_Summary__c/SPEX_DB_Platform_Summary__c.object-meta.xml
<CustomObject>
    <description>Object to hold SPEX DB data by OEM and Platform</description>
    <label>SPEX DB Platform Summary</label>
    <nameField>
        <displayFormat>SPEXPLAT-{0000000}</displayFormat>
        <label>SPEX DB Platform Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPEX DB Platform Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>