src/objects/SPEX_DB_Platform_Summary__c/fields/AtRisk_Americ__c.field-meta.xml
<CustomField>
    <fullName>AtRisk_Americ__c</fullName>
    <description>Returns 1 if Americas is in Risk status</description>
    <formula>IF((Part_Number__r.Min_Stock_Americas__c &gt; 0)&amp;&amp;((Prt_Sts_Amer__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_Americas__c &gt; 0)||(Prt_Sts_Amer__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_Americas__c = 0 &amp;&amp; Part_Number__r.Stock_By_Americas__c = 0)|| (Prt_Sts_Amer__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_Americas__c = 0 )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtRisk_Americas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>