src/objects/SPEX_DB_Platform_Summary__c/fields/AtRisk_APAC__c.field-meta.xml
<CustomField>
    <fullName>AtRisk_APAC__c</fullName>
    <description>Returns 1 if APAC is in Risk status</description>
    <formula>IF((Part_Number__r.Min_Stock_APAC__c &gt; 0)&amp;&amp;((Prt_Sts_APAC__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_APAC__c &gt; 0)||(Prt_Sts_APAC__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_APAC__c = 0 &amp;&amp; Part_Number__r.Stock_By_APAC__c = 0)|| (Prt_Sts_APAC__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_APAC__c = 0)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtRisk_APAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>