src/objects/SPEX_DB_Platform_Summary__c/fields/AtRisk_EMEA__c.field-meta.xml
<CustomField>
    <fullName>AtRisk_EMEA__c</fullName>
    <formula>IF((Part_Number__r.Min_Stock_EMEA__c &gt; 0)&amp;&amp;((Prt_Sts_EMEA__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_EMEA__c &gt; 0)||(Prt_Sts_EMEA__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_EMEA__c = 0 &amp;&amp; Part_Number__r.Stock_By_EMEA__c = 0)|| (Prt_Sts_EMEA__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_EMEA__c = 0)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AtRisk_EMEA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>