src/objects/SPEX_DB_Platform_Summary__c/fields/Grey_Part__c.field-meta.xml
<CustomField>
    <fullName>Grey_Part__c</fullName>
    <description>Return 1 if the part has no red, yellow tiles but has grey tiles</description>
    <formula>IF((StockOut_Part__c = 0 &amp;&amp; Risk_Part__c = 0 &amp;&amp; GreyCnt__c &gt; 0), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grey_Part</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>