src/objects/SPEX_DB_Platform_Summary__c/fields/OEM_Name__c.field-meta.xml
<CustomField>
    <fullName>OEM_Name__c</fullName>
    <description>Original Equipment Manufacturer for the given part.</description>
    <label>OEM Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>