src/objects/SPEX_DB_Platform_Summary__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>SPEX_DB_Part_Summary__c</referenceTo>
    <relationshipLabel>SPEX DB Platform Summary</relationshipLabel>
    <relationshipName>SPEX_DB_Platform_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>