src/objects/SPEX_DB_Platform_Summary__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Name of the Platform the given part is used on</description>
    <label>Platform</label>
    <length>45</length>
    <type>Text</type>
</CustomField>