src/objects/SPEX_DB_Platform_Summary__c/fields/Prt_Plt_Sts_APAC__c.field-meta.xml
<CustomField>
    <fullName>Prt_Plt_Sts_APAC__c</fullName>
    <formula>IF(Prt_Sts_APAC__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_APAC__c &gt; 0, &apos;Stock_Out&apos;, IF( Part_Number__r.Min_Stock_APAC__c == 0, &apos;Grey&apos;, IF((Prt_Sts_APAC__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_APAC__c &gt; 0) || (Prt_Sts_APAC__c = &apos;At_Risk&apos; &amp;&amp; Demand_By_APAC__c = 0 &amp;&amp; Part_Number__r.Stock_By_APAC__c = 0)|| (Prt_Sts_APAC__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_APAC__c = 0) , &apos;At_Risk&apos;, &apos;Safe&apos;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part_Platform_Status_APAC</label>
    <type>Text</type>
</CustomField>