src/objects/SPEX_DB_Platform_Summary__c/fields/Prt_Sts_APAC__c.field-meta.xml
<CustomField>
    <fullName>Prt_Sts_APAC__c</fullName>
    <description>This field has the same value as the &apos;Status_APAC__c&apos; in SPEX_DB_Part_Summary__c object. Triggers UpdatePlatformStatus and UpdatePlatformFields update value for this field.</description>
    <label>Part_Status_APAC</label>
    <length>12</length>
    <type>Text</type>
</CustomField>