src/objects/SPEX_DB_Platform_Summary__c/fields/RiskCnt__c.field-meta.xml
<CustomField>
    <fullName>RiskCnt__c</fullName>
    <formula>AtRisk_Americ__c + AtRisk_APAC__c + AtRisk_EMEA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>