src/objects/SPEX_DB_Platform_Summary__c/fields/RiskGreyCnt__c.field-meta.xml
<CustomField>
    <fullName>RiskGreyCnt__c</fullName>
    <description>Sum of the Risk tiles and Grey tiles in three regions</description>
    <formula>RiskCnt__c + GreyCnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Grey_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>