src/objects/SPEX_DB_Platform_Summary__c/fields/StckOutAmer__c.field-meta.xml
<CustomField>
    <fullName>StckOutAmer__c</fullName>
    <description>Returns 1 if Americas is in Stock_Out status</description>
    <formula>IF(Prt_Sts_Amer__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_Americas__c &gt; 0, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockOut_Americas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>