src/objects/SPEX_DB_Platform_Summary__c/fields/StckOutApac__c.field-meta.xml
<CustomField>
    <fullName>StckOutApac__c</fullName>
    <description>Returns 1 if APAC is in Stock_Out status</description>
    <formula>IF(Prt_Sts_APAC__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_APAC__c &gt; 0, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockOut_APAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>