src/objects/SPEX_DB_Platform_Summary__c/fields/StckOutCnt__c.field-meta.xml
<CustomField>
    <fullName>StckOutCnt__c</fullName>
    <formula>StckOutAmer__c  +  StckOutApac__c  +  StckOutEMEA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockOutCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>