src/objects/SPEX_DB_Platform_Summary__c/fields/StckOutEMEA__c.field-meta.xml
<CustomField>
    <fullName>StckOutEMEA__c</fullName>
    <description>Returns 1 if EMEA is in Stock_Out status</description>
    <formula>IF(Prt_Sts_EMEA__c = &apos;Stock_Out&apos; &amp;&amp; Demand_By_EMEA__c &gt; 0, 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockOut_EMEA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>