src/objects/SPEX_DB_Platform_Summary__c/fields/StockOut_Part__c.field-meta.xml
<CustomField>
    <fullName>StockOut_Part__c</fullName>
    <description>Return 1 if the part has red tiles</description>
    <formula>IF( StckOutCnt__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockOut_Part</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>