src/objects/SPEX_DB_Platform_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Part_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Prt_Sts_Amer__c</columns>
    <columns>Prt_Sts_APAC__c</columns>
    <columns>Prt_Sts_EMEA__c</columns>
    <columns>Demand_By_Americas__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform__c</field>
        <operation>equals</operation>
        <value>FALCON 2000</value>
    </filters>
    <filters>
        <field>OEM_Name__c</field>
        <operation>equals</operation>
        <value>DASSAULT</value>
    </filters>
    <label>All</label>
</ListView>